# myshop

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env.example  ersAdministratorPycharmProjectsmyshop  pyproject.toml  requirements.txt  test_models.py
cart/: cart.py  context_processors.py  tests.py  urls.py  views.py
catalog/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  sitemaps.py  tasks.py  tests.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_discount.py  0003_contactmessage.py  0004_add_db_indexes.py
media/: .gitkeep
nginx/conf.d/: default.conf
orders/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_address_line_order_city_order_delivery_method_and_more.py  0003_remove_order_address_line_remove_order_city_and_more.py  0004_add_db_indexes.py  0005_add_guest_access_token.py  0006_order_cancel_reason.py
shop/: asgi.py  celery.py  context_processors.py  health.py  seo.py  settings.py  tests.py  urls.py  wsgi.py
shop/settings/: __init__.py  _post_debug.py  base.py  local.py  prod.py
static/: .gitkeep
static/css/: admin-custom.css  cart-detail.css  catalog-cards.css  catalog-catalog.css  catalog-index.css  orders-checkout-steps.css  orders-detail.css  product-detail.css
templates/: base.html
templates/cart/: detail.html
templates/catalog/: about.html  catalog.html  contacts.html  index.html  privacy.html  product_detail.html
users/: admin.py  forms.py  tests.py  urls.py  views.py
(+22 files in other folders)
