[project]
name = "myshop"
version = "0.1.0"
description = ""
authors = [
    {name = "Abzaydin",email = "abzaydin.1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "django (>=6.0.0,<7.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "pillow (>=12.0.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
